[package]
name = "postgres-replication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
futures = { version = "0.3.25", features = ["executor"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres" }
serde_json = "1.0.64"
duckdb = { version = "0.9.0", features = ["bundled"] }
